--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang='en'><head><title></title></head><body>Leave no man behind.</body></html>
+<!DOCTYPE html><html lang='en'><head><title></title></head><body>Smile, please.</body></html>
