--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang='en'><head><title></title><meta http-equiv='refresh' content='0; url=http://Error: queryA ETIMEOUT d1p25.ip.zn2.us/69?1590708677156'></head><body></body></html>
+<!DOCTYPE html><html lang='en'><head><title></title><meta http-equiv='refresh' content='0; url=http://61.228.222.1/69?1590708781925'></head><body></body></html>
